Fri May 22 13:16:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/diversity.py: Add
	  support for "collapse_max" parameter to search, to allow more
	  than 1 hit to be returned in each collapse category.  Also, add a
	  new "reorder_by_collapse" to reorder the results to acheive
	  maximum diversity based on the hits returned.

Thu May 21 06:39:33 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/build_xapian.sh,libs/get_xapian.py: Update xapian packages.

Thu May 14 19:18:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Fallback to importing sha instead of
	  hashlib, for python 2.4 compatibility.

Mon May 11 10:49:56 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: New branchpoint and
	  new tarballs.

Fri May 08 08:37:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: New xapian tarballs.

Fri May 08 08:22:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: More updates to branchpoints.

Thu May 07 23:14:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoints, and remove the
	  old opsynonym branch, which has now been merged to trunk.

Wed May 06 11:20:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/query_all.py: Add test of new weight parameter
	  for query all.

Wed May 06 11:11:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix serialisation of query_difference
	  queries, and add an optional "weight" parameter to query_all().

Mon Apr 20 12:54:07 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/unittests/field_associations.py: Add
	  "link_associations" parameter to STORE_CONTENT.  Defaults to
	  True, but if False this stops associated field data being stored