@@ -1,3 +1,9 @@
+Sat May 23 08:29:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Estimate the initial utilities only on
+	  the basis of the top 100 results, so that paging through the
+	  results further doesn't result in an unstable ordering.
+
 Fri May 22 13:16:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py,xappy/unittests/diversity.py: Add
